--- a/paperSpringMVC/pom.xml
+++ b/paperSpringMVC/pom.xml
@@ -257,6 +257,12 @@
       <artifactId>pagehelper</artifactId>
       <version>5.1.2</version>
     </dependency>
+      <dependency>
+          <groupId>org.junit.jupiter</groupId>
+          <artifactId>junit-jupiter-api</artifactId>
+          <version>5.3.2</version>
+          <scope>compile</scope>
+      </dependency>
 
   </dependencies>
 
