--- a/paperSpringMVC/pom.xml
+++ b/paperSpringMVC/pom.xml
@@ -337,6 +337,10 @@
         <includes>
           <include>**/*.properties</include>
           <include>**/*.xml</include>
+
+          <include>*.xml</include>
+          <include>*.properties</include>
+
         </includes>
         <filtering>true</filtering>
       </resource>
