ssm修改了uri的格式,没有动词

--- a/paperSpringMVC/pom.xml
+++ b/paperSpringMVC/pom.xml
@@ -10,7 +10,7 @@
   <packaging>war</packaging>
 
   <name>Task Maven Webapp</name>
-  <!-- FIXME change it to the project'studentInfo.jsp website -->
+  <!-- FIXME change it to the project'AllStudent.jsp website -->
   <url>http://www.example.com</url>
 
   <properties>
